--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
     </header>
     <section id="welcome" class="container">
       <div id="title-box">
-        <h1 class="title">
-          5가지의 유형의 지니어스<br>
-          난, 얼마나 생각해봤지??
-        </h1>
+        <h2 class="title">
+          🩷현황 자가진단 테스트🩷</h2>
         <h3 class="sec-tit">
-          5가지 질문으로<br>
-          알아보는 내 유형
+          나의 전도현황을 5가지 유형으로 진단해보는<br>
+          노량지니 전용 전도mbti테스트  
         </h3>
         <span class="time-logo"></span>
         <div>소요 시간 : 3분 내외</div>
@@ -60,7 +58,7 @@
       <hr class="w-line">
       <p class="w-line">
         <span id="p-tit">지니어스 첫번째 문...</span><br>
-        솔직한 선택을 하십시오.<br>
+        솔직하게 선택🫶🏻<br>
       </p>
       <hr class="w-line">
       <div id="name-input">
