--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     <section id="welcome" class="container">
       <div id="title-box">
         <h2 class="title">
-          🩷현황 자가진단 테스트🩷</h2>
+          🩷전도 MBTI 자가진단 테스트🩷</h2>
         <h3 class="sec-tit">
           나의 전도현황을 5가지 유형으로 진단해보는<br>
-          노량지니 전용 전도mbti테스트  
+          노량지니 전용 전도MBTI테스트  
         </h3>
         <span class="time-logo"></span>
         <div>소요 시간 : 3분 내외</div>
       </div>
       <hr class="w-line">
       <p class="w-line">
-        <span id="p-tit">지니어스 첫번째 문...</span><br>
+        <span id="p-tit">지니어스 두번째 문...</span><br>
         솔직하게 선택🫶🏻<br>
       </p>
       <hr class="w-line">
@@ -95,12 +95,12 @@
         <div class="result title"></div>
         <div class="res desc"></div>
         <span class="go-artist highlight" onclick=javascript:goArtist()>
-          이런 당신에게 맞는 솔루션은?
+          이런 당신에게 맞는 솔루션은? (클릭)
         </span>
       </div>
       <hr>
       <p>공유하기</p>
-      <div class="hash">#10_things_test #3분이미지테스트 #이미지테스트</div>
+      <div class="hash">#3_things_test #3분 전도 MBTI #노량지니</div>
       <div id="share-box">
         <a onclick=javascript:tw() target="_blank" alt="Share on Twitter" title="트위터에 공유하기">
           <span class="tw"></span>
